# abm-research

./: .gitignore  .pre-commit-config.yaml  ABM_FINANCIAL_ANALYSIS_REPORT.md  ABM_QA_TESTING_ASSESSMENT.md  ABM_SYSTEM_DESIGN_DOCUMENT.md  ACCOUNT_COMMAND_CENTER.md  CURRENT_SYSTEM_GAP_ANALYSIS.md  DEVELOPMENT_PROCESS_IMPROVEMENTS.md  FEATURE_REFERENCE_SYSTEM.md  FUTURE_ROADMAP.md  HARDENING_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  NOTION_SCHEMA.md  PRODUCTION_READY_REPORT.md  PROJECT_COMPLETE.md  README.md  REMAINING_ISSUES.md  abm_config.py  access_page_databases.py  actual_database_ids.json  advanced_abm_dashboard.py  aggressive_notion_cleanup.py  apollo_contact_discovery.py  apollo_feature_test.py  apollo_usage.json  apollo_usage_monitor.py  check_database_schema.py  cleanup_duplicate_accounts.py  cleanup_mock_data.py  complete_abm_dashboard.py  complete_abm_production_system.py  comprehensive_abm_system.py  contact_value_analyzer.py  coverage.xml  critical_audit_analysis.py  dashboard_data_service.py  data_cleanup_and_enhancement.py  database_ids.json  database_schema_analysis.md  debug_apollo_bulk_match.py  (+48 more)
.github/workflows/: ci.yml
agents/: abm_finance_agent.py  codebase_hygiene_agent.py  data_pipeline_agent.py  product_design_agent.py  qa_verification_agent.py  system_integration_agent.py  verdigris_signals_meddic_framework.py
archive/legacy-dashboards/: abm_dashboard.py  dashboard_data_service.py
config/: linkedin_config.json  settings.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: AccountCard.tsx  AccountDetail.tsx  AccountFieldEnrichmentButton.tsx  AccountList.tsx  AddAccountModal.tsx  ChangelogModal.tsx  CollapsibleSection.tsx  ContactCard.tsx  CopyButton.tsx  EnrichmentButton.tsx  FeedbackModal.tsx  InfrastructureBreakdown.tsx  OutreachPanel.tsx  PartnerPaths.tsx  PartnerRankings.tsx  PartnershipsList.tsx  ResearchButton.tsx  ScoreBadge.tsx  Tooltip.tsx  TriggerEventsList.tsx  TriggerEventsSection.tsx  VendorDiscoveryButton.tsx  index.ts
dashboard/src/data/: changelog.ts  tooltips.ts
dashboard/src/hooks/: useDebounce.ts  useSessionStorage.ts
dashboard/src/types/: index.ts
dashboard/src/utils/: outreachGenerator.ts
docs/: NOTION_SCHEMA.md  RETROSPECTIVE_2025_12_01.md  RETROSPECTIVE_2025_12_02.md  SALES_ONBOARDING_AND_UX_PLAN.md
references/: lead_scoring_config.json  strategic_partnerships.md  trigger_events.md
scripts/: apollo_usage_monitor.py  batch_research.py  batch_vendor_discovery.py  cleanup_duplicate_contacts.py  critical_audit_analysis.py  enrich_all.py  test-import-integrity.py  test_model_comparison.py  verify-real-data.sh
scripts/analysis/: field_overlap_analysis.py  schema_compliance_plan.py
scripts/debug/: debug_abm_account_save.py  debug_apollo_bulk_match.py  debug_classifier_scoring.py  debug_database_config.py  debug_database_ids.py  debug_nvidia_classification.py  get_correct_database_ids.py  get_real_database_schemas.py  investigate_notion_database_access.py  investigate_tensorflow_issue.py
scripts/emergency/: emergency_cleanup_gpu_test.py
scripts/maintenance/: add_enhanced_fields.py  cleanup_duplicate_accounts.py  cleanup_mock_data.py  cleanup_test_data.py  comprehensive_system_fix.py  data_cleanup_and_enhancement.py  direct_api_population_system.py  enhance_database_schemas.py  enhance_existing_databases.py  enrich_existing_accounts.py  fix_existing_databases.py  fix_notion_databases.py  fix_notion_field_mapping.py  fix_tensorflow_classification.py  populate_real_data.py  production_test_with_cleanup.py  save_abm_results.py  update_existing_databases.py  validate_database_state.py  work_with_existing_databases.py
src/: genesis_cloud_command_center.html  main.py  verdigris_abm_dashboard.html  verdigris_sales_dashboard.html
src/abm_research/: __init__.py  main.py
src/abm_research/api/: __init__.py  server.py
src/abm_research/config/: __init__.py  abm_config.py  linkedin_config.json  manager.py  settings.py
src/abm_research/core/: __init__.py  abm_system.py  test_mode_abm_system.py  unified_lead_scorer.py
src/abm_research/dashboard/: __init__.py  abm_dashboard.py  dashboard_data_service.py
src/abm_research/data/: account_conflict_resolver.py  automated_data_quality_system.py  hybrid_data_manager.py  quality_scheduler.py
src/abm_research/data_sources/: __init__.py  apollo_client.py  (+3 more)
src/data_sources/: apollo_client.py  linkedin_scraper.py  trigger_event_detector.py  web_scraper.py
src/integrations/: __init__.py  notion_database.py
src/models/: __init__.py  contact.py  engagement_intelligence.py  lead_scoring.py  meddic_framework.py  strategic_partnership.py  trigger_event.py
src/phases/: __init__.py  phase_1_account_intelligence.py  phase_2_contact_discovery.py  phase_3_contact_enrichment.py  phase_4_engagement_intelligence.py  phase_5_partnership_intelligence.py
src/utils/: __init__.py  data_classification.py  rate_limiter.py
tests/: __init__.py  test_abm_integration.py  test_abm_security.py  test_phase_1.py
tests/debug/: test_abm_api_enrichment.py  test_abm_security.py  test_apollo_fix.py  test_apollo_health.py  test_company_enrichment.py  test_config_manager.py  test_coreweave_fix.py  test_database_ids.py  test_fixed_abm_saves.py  test_linkedin_fix.py  test_linkedin_integration.py  test_mode_demo.py  test_notion_save_fix.py  test_nvidia_fix.py  test_permissions_fix.py  test_phase2_schema_compliance.py  test_relations_fix.py
tests/fixtures/: sample_data.py
tests/unit/: test_contact_transform.py  test_meddic_scorer.py
(+34 files in other folders)
